--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@types/react-gallery-carousel": "^0.2.2",
     "@types/react-scroll": "^1.8.6",
     "@types/styled-components": "^5.1.26",
-    "bootstrap": "5.3.0-alpha1",
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-gallery-carousel": "^0.4.0",
     "react-icons": "^4.7.1",
