--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-country-flag": "^3.0.2",
     "react-dom": "^18.2.0",
     "react-gallery-carousel": "^0.4.0",
     "react-icons": "^4.7.1",
